<resources>
    <string name="app_name">Homework1</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="res">=</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="substraction">-</string>
    <string name="multiply">×</string>
    <string name="clear">C</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="backspace">◘</string>
    <string name="brackets">(</string>
    <string name="_16x_0_5">16x(0,5)</string>
    <string name="symbol"><![CDATA[<]]></string>
</resources>