<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data"
        android:textAlignment="textEnd"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="49dp" />

    <Button
        android:id="@+id/btn_C"
        style="@style/buttonNum"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_backspace"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_backspace"
        style="@style/buttonNum"
        android:contentDescription="@string/backspace"
        android:background="@drawable/backspace"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/btn_8"
        app:layout_constraintLeft_toRightOf="@id/btn_C"
        app:layout_constraintRight_toLeftOf="@id/btn_percent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_percent"
        style="@style/buttonNum"
        android:text="@string/percent"
        app:layout_constraintBottom_toTopOf="@id/btn_9"
        app:layout_constraintLeft_toRightOf="@id/btn_backspace"
        app:layout_constraintRight_toLeftOf="@id/btn_multiply"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_7"
        style="@style/buttonNum"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_8"
        app:layout_constraintTop_toBottomOf="@id/btn_C" />

    <Button
        android:id="@+id/btn_4"
        style="@style/buttonNum"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_5"
        app:layout_constraintTop_toBottomOf="@id/btn_7" />

    <Button
        android:id="@+id/btn_1"
        style="@style/buttonNum"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/btn_brackets"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_2"
        app:layout_constraintTop_toBottomOf="@id/btn_4" />

    <Button
        android:id="@+id/btn_brackets"
        style="@style/buttonNum"
        android:backgroundTint="@color/grey"
        android:text="@string/brackets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_0"
        app:layout_constraintTop_toBottomOf="@id/btn_1" />

    <Button
        android:id="@+id/btn_8"
        style="@style/buttonNum"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@id/btn_5"
        app:layout_constraintLeft_toRightOf="@id/btn_7"
        app:layout_constraintRight_toLeftOf="@id/btn_9"
        app:layout_constraintTop_toBottomOf="@id/btn_backspace" />

    <Button
        android:id="@+id/btn_5"
        style="@style/buttonNum"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/btn_2"
        app:layout_constraintLeft_toRightOf="@id/btn_4"
        app:layout_constraintRight_toLeftOf="@id/btn_6"
        app:layout_constraintTop_toBottomOf="@id/btn_8" />

    <Button
        android:id="@+id/btn_2"
        style="@style/buttonNum"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintLeft_toRightOf="@id/btn_1"
        app:layout_constraintRight_toLeftOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_5" />

    <Button
        android:id="@+id/btn_0"
        style="@style/buttonNum"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_brackets"
        app:layout_constraintRight_toLeftOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_2" />


    <Button
        android:id="@+id/btn_9"
        style="@style/buttonNum"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/btn_6"
        app:layout_constraintLeft_toRightOf="@id/btn_8"
        app:layout_constraintRight_toLeftOf="@id/btn_substraction"
        app:layout_constraintTop_toBottomOf="@id/btn_percent" />

    <Button
        android:id="@+id/btn_6"
        style="@style/buttonNum"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/btn_3"
        app:layout_constraintLeft_toRightOf="@id/btn_5"
        app:layout_constraintRight_toLeftOf="@id/btn_plus"
        app:layout_constraintTop_toBottomOf="@id/btn_9" />

    <Button
        android:id="@+id/btn_3"
        style="@style/buttonNum"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        app:layout_constraintLeft_toRightOf="@id/btn_2"
        app:layout_constraintRight_toLeftOf="@id/btn_division"
        app:layout_constraintTop_toBottomOf="@id/btn_6" />

    <Button
        android:id="@+id/btn_dot"
        style="@style/buttonNum"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_0"
        app:layout_constraintRight_toLeftOf="@id/btn_res"
        app:layout_constraintTop_toBottomOf="@id/btn_3" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/buttonOperation"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@id/btn_substraction"
        app:layout_constraintLeft_toRightOf="@id/btn_percent"
        app:layout_constraintRight_toLeftOf="@id/symbol"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_substraction"
        style="@style/buttonOperation"
        android:text="@string/substraction"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        app:layout_constraintLeft_toRightOf="@id/btn_9"
        app:layout_constraintRight_toLeftOf="@id/symbol"
        app:layout_constraintTop_toBottomOf="@id/btn_multiply" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/buttonOperation"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@id/btn_division"
        app:layout_constraintLeft_toRightOf="@id/btn_6"
        app:layout_constraintRight_toLeftOf="@id/symbol"
        app:layout_constraintTop_toBottomOf="@id/btn_substraction" />

    <Button
        android:id="@+id/btn_division"
        style="@style/buttonOperation"
        android:text="@string/division"
        app:layout_constraintBottom_toTopOf="@id/btn_res"
        app:layout_constraintLeft_toRightOf="@id/btn_3"
        app:layout_constraintRight_toLeftOf="@id/symbol"
        app:layout_constraintTop_toBottomOf="@id/btn_plus" />

    <Button
        android:id="@+id/btn_res"
        style="@style/buttonOperation"
        android:text="@string/res"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_dot"
        app:layout_constraintRight_toLeftOf="@id/symbol"
        app:layout_constraintTop_toBottomOf="@id/btn_division" />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="10dp"
        android:layout_height="250dp"
        android:layout_marginEnd="52dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/symbol"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintVertical_bias="0.497" />

</androidx.constraintlayout.widget.ConstraintLayout>